[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "=0.10.2"           # AES encryption
rand = "0.8"               # For nonce generation
argon2 = "0.5"             # For password hashing
colored = "2.0"            # Colored terminal output
chrono = "0.4"             # For timestamps
base64 = "0.21" 